<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">识花</string>
    <string name="no_more">没有更多了</string>
    <string name="draw_foreground">画花朵</string>
    <string name="draw_backgroud">画背景</string>
    <string name="info">选好花的照片，用两种颜色的笔以表示前景背景，点确定便可识别花朵</string>
    <string name="please_use">请用</string>
    <string name="draw_back">画背景</string>
    <string name="draw_flower">画花朵</string>
    <string name="dirTip">从手机相册中打开一张花的图片</string>
    <string name="drawTip">在这里涂鸦，以表示背景和花朵</string>
    <string name="okTip">画好了，点这里提取花卉</string>
    <string name="please_draw_finish">没画完哦，得用蓝线画出背景、用红线画在花上、用矩形圈出花朵</string>
    <string name="recogTips">分离得可以的话请点确定来找类似的花卉们</string>
    <string name="recog_flower">类似花卉</string>
    <string name="is_loading">加载中...</string>
    <string name="helpTip">有疑问随时点我:)</string>
    <string name="empty_prompt">用户名和密码不能空哦</string>
    <string name="pleaseChooseOneFlower">请选一张心仪的图片</string>
    <string name="server_error">服务器错误</string>
    <string name="origin_flower">原花</string>
    <string name="drawRect">画矩形</string>
    <string name="no_network">未联网</string>
    <string name="comma">，</string>
    <string name="drawRectTips">圈出花朵大致区域</string>
    <string name="splashText">花卉识别，从心开始</string>
    <string name="draw_flower_tips">画在花朵上</string>
    <string name="draw_back_tips">表示花朵周围的背景</string>

    <string name="pleaseInputName">请输入数字或字母组成的用户名</string>
    <string name="pleaseInputPassword">请输入数字或字母组成的密码</string>
    <string name="remberPassword">记住密码</string>
    <string name="login">登录</string>
    <string name="find">查找</string>
    <string name="register">注册</string>

    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">image_url</string>
    <string name="image_name">image_name</string>
    <string name="username_prompt">请输入用户名</string>
    <string name="password_prompt">请输入密码</string>
    <string name="fail_login_tips">未联网或用户名密码错误</string>
    <string name="login_succeed">登录成功</string>
    <string name="register_prompt">请输入账号来注册</string>
    <string name="have_been_registered">未联网或者用户名已被注册</string>
    <string name="has_empty_char">不能用空的字符串</string>
    <string name="has_wrong_char">有非法的字符</string>
    <string name="pleaseInputName">请输入数字或字母组成的用户名</string>
    <string name="pleaseInputPassword">请输入数字或字母组成的密码</string>
    <string name="remberPassword">记住密码</string>
    <string name="login">登录</string>
    <string name="find">查找</string>
    <string name="register">注册</string>
    <string name="uploadPhotos">上传图片</string>
    <string name="upload">上传</string>
    <string name="fromGallery">图库</string>
    <string name="takePhoto">拍照</string>

</resources>
