<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/flower_b" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromGallery"
                style="@style/btn_blue"/>

            <Button
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/takePhoto"
                style="@style/btn_blue" />

        </LinearLayout>

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            style="@style/btn_blue"
            android:layout_height="wrap_content"
            android:text="@string/upload" />
    </LinearLayout>

</ScrollView>
